<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aes_iv">jRW0a993cH9cc97b</string>
    <string name="aes_key">eTYR77JO4LW0TeNW</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apk_expansion_file_md5">671e8a41193708a075aed8954002e1d3</string>
    <string name="apk_expansion_file_obb">false</string>
    <string name="apk_expansion_file_size">41101648</string>
    <string name="app_drag_delete">拖动到此处删除</string>
    <string name="app_error">110000100</string>
    <string name="app_let_go_drag_delete">松手即可删除</string>
    <string name="app_name">Empire</string>
    <string name="app_name2">Osmanlı Savaşçıları</string>
    <string name="app_name_en">Ottomans</string>
    <string name="app_name_en2">Ottoman Warriors</string>
    <string name="app_name_test">奥斯曼大帝国</string>
    <string name="app_name_xiaomi">days of empire</string>
    <string name="app_picture_selector_name">PictureSelector</string>
    <string name="app_wechat_send">发送</string>
    <string name="app_wechat_send_num">发送(%1$d/%2$d)</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.CrashSubmissionAlwaysSendTitle">Always Send</string>
    <string name="com.crashlytics.CrashSubmissionCancelTitle">"Don't Send"</string>
    <string name="com.crashlytics.CrashSubmissionPromptMessage">Looks like we crashed! Please help us fix the problem by sending a crash report.</string>
    <string name="com.crashlytics.CrashSubmissionPromptTitle">Send Crash Report?</string>
    <string name="com.crashlytics.CrashSubmissionSendTitle">Send</string>
    <string name="com.crashlytics.android.build_id">ca7f611c3d5c4e98a1d9182fd4437b6a</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_web_client_id">309687044477-8en3n3hifdkf215nl9uu8kqokhjpfhap.apps.googleusercontent.com</string>
    <string name="en_word_one">gqY6DBt</string>
    <string name="en_word_two">Oed76U0</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="external_error">external error</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">2112162085467306</string>
    <string name="facebook_app_token">0ce3b5b9ceb3f9d4251897c02b28bdaf</string>
    <string name="facebook_authorize_fail">Fail in authorize!</string>
    <string name="facebook_authorize_success">Authorize successful!</string>
    <string name="facebook_invite_fail">Fail in send!</string>
    <string name="facebook_invite_success">Send successful!</string>
    <string name="fail">fail</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fb_login_protocol_scheme">fb2112162085467306</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://boe-tr.firebaseio.com</string>
    <string name="gcm_defaultSenderId">309687044477</string>
    <string name="google_api_key">AIzaSyDkAZSyzV_Nkj-e2SNkG2y1SPoiiqfWpTQ</string>
    <string name="google_app_id">1:309687044477:android:f8a16238980b353a</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_original_image">原图</string>
    <string name="picture_select">选择</string>
    <string name="sdk_found_game_data_for_google_cancel_button">Cancel</string>
    <string name="sdk_found_game_data_for_google_switch_button">Yes</string>
    <string name="sdk_found_game_data_for_google_tooltip">Do you want to load from this account which is associated with other game data? Warning: The current game data will be lost.</string>
    <string name="sdk_media_permission_cancel">Cancel</string>
    <string name="sdk_media_permission_disallow_setting">"You haven't yet given your permission for some functions. Please proceed to \"Settings - Permissions\" to grant access to photos and videos."</string>
    <string name="sdk_media_permission_setting">Settings</string>
    <string name="sdk_preview_button">预览</string>
    <string name="sdk_save_button">完成</string>
    <string name="sdk_uc_deleteAccount_label">Account Deletion</string>
    <string name="sdk_uc_setting_data_delete">Data Deletion</string>
    <string name="sdk_uc_setting_delete_info">Profile Deletion</string>
</resources>