<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="20.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip">
        <TextView android:textSize="22.0sp" android:textStyle="bold" android:textColor="@color/uc_account_title_color" android:id="@id/modifyLabelTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sdk_uc_setting_data_delete" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/uc_account_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <com.onemt.sdk.user.ui.setting.widget.SettingItemWidget android:id="@id/dataAccountInfoDelSw" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:ucLabel="@string/sdk_uc_setting_delete_info" custom:ucShowDivider="true" />
        <com.onemt.sdk.user.ui.setting.widget.SettingItemWidget android:id="@id/dataAccountDelSw" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:ucLabel="@string/sdk_uc_deleteAccount_label" />
    </LinearLayout>
</LinearLayout>