<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/container" android:background="@color/picture_color_black" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/picture_title_bar" />
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_bottom" android:background="@color/picture_color_grey" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true">
        <TextView android:enabled="false" android:textSize="16.0sp" android:textColor="@color/picture_list_text_color" android:gravity="center|left" android:id="@id/picture_id_preview" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/sdk_preview_button" android:layout_centerVertical="true" />
        <CheckBox android:textSize="14.0sp" android:textColor="@color/picture_color_53575e" android:gravity="center" android:id="@id/cb_original" android:background="@color/picture_color_transparent" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@color/picture_color_transparent" android:text="@string/picture_original_image" android:layout_centerInParent="true" />
        <TextView android:enabled="false" android:textSize="16.0sp" android:textColor="@color/picture_list_text_color" android:gravity="center|left" android:id="@id/picture_tv_ok" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/sdk_save_button" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textSize="12.0sp" android:textColor="@color/picture_color_white" android:gravity="center" android:id="@id/picture_tv_img_num" android:background="@drawable/picture_num_oval" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="0" android:layout_toLeftOf="@id/picture_tv_ok" android:layout_centerVertical="true" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/picture_recycler" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:layout_above="@id/rl_bottom" android:layout_below="@id/titleViewBg" />
    <TextView android:textSize="16.0sp" android:textColor="@color/picture_color_aab2bd" android:gravity="center" android:id="@id/tv_empty" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/picture_empty" android:layout_centerInParent="true" android:lineSpacingExtra="3.0dip" />
</RelativeLayout>