<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/picture_color_black" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/picture_wechat_style_preview_title_bar" />
    <com.onemt.picture.lib.widget.PreviewRtlViewPager android:id="@id/preview_pager" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/titleViewBg" />
    <View android:id="@id/bottomLine" android:background="@color/picture_color_ec" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_above="@id/select_bar_layout" />
    <android.support.v7.widget.RecyclerView android:id="@id/rv_gallery" android:background="@color/picture_color_half_grey" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_above="@id/bottomLine" />
    <RelativeLayout android:gravity="center_vertical" android:id="@id/select_bar_layout" android:background="@color/picture_color_grey" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true">
        <CheckBox android:textSize="14.0sp" android:textColor="@color/picture_color_53575e" android:gravity="center_vertical" android:id="@id/cb_original" android:background="@color/picture_color_transparent" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@color/picture_color_transparent" android:text="@string/picture_original_image" android:layout_centerInParent="true" />
        <TextView android:enabled="false" android:textSize="14.0sp" android:textColor="@color/picture_list_text_color" android:gravity="center|left" android:id="@id/tv_ok" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/sdk_save_button" android:layout_alignParentRight="true" />
        <TextView android:textSize="12.0sp" android:textColor="@color/picture_color_white" android:gravity="center" android:id="@id/tv_img_num" android:background="@drawable/picture_num_oval" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="0" android:layout_toLeftOf="@id/tv_ok" android:layout_centerVertical="true" />
        <TextView android:enabled="false" android:textSize="16.0sp" android:textColor="@color/picture_color_white" android:gravity="center|left" android:id="@id/tv_selected" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/picture_select" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:gravity="center" android:id="@id/check" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="5.0dip" android:layout_toLeftOf="@id/tv_selected" android:layout_centerVertical="true" />
        <View android:id="@id/btnCheck" android:background="@color/picture_color_transparent" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>